First simple version working

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,9 @@ tasks:
       wget -O karaf.tar.gz http://archive.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz &&
       tar -zvxf karaf.tar.gz &&
       rm karaf.tar.gz &&
+      cd libs/actr &&
+      mvn clean install &&
+      cd ../.. &&
       mvn clean install
     command: >
       export JAVA_TOOL_OPTIONS="-Xmx4096m" &&
