--- a/libs/actr/pom.xml
+++ b/libs/actr/pom.xml
@@ -31,7 +31,7 @@
                 </executions>
                 <configuration>
                     <file>actr.jar</file>
-                    <groupId>io.qbilon</groupId>
+                    <groupId>com.zakgof.github</groupId>
                     <artifactId>actr</artifactId>
                     <version>${actr.version}</version>
                     <packaging>bundle</packaging>
